# MAR-DSS

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  frozen_launcher.py  justfile  pyproject.toml
.github/: ISSUE_TEMPLATE.md
docs/: index.md  installation.md  usage.md
recycle_bin/: ope2.py  open3.py  open3_improved.py  openStreamMap.py  opn4.py  streamStat.py  txtapp.py
src/mar_dss/: __init__.py  base.py  cli.py  dashboard.py
src/mar_dss/app/: ai_generated_decision_tab.py  dashboard_tab.py  data_export_tab.py  decision_interpretation_tab.py  decision_sensitivity_tab.py  dss_algorithm_tab.py  general_tab.py  hydro_tab.py  main.py  reports_tab.py  scenarios_comparison_tab.py  settings_tab.py  sidebar_content.py  water_source_tab.py
src/mar_dss/app/assets/: .gitkeep  clientside.js  custom.css  logo_placeholder.txt
src/mar_dss/app/callbacks/: ai_environment.py  ai_regulations.py  analysis_callbacks.py  cost_calculator.py  cost_callbacks.py  curve_number_calculator.py  decision_sensitivity_callbacks.py  dss_algorithm_callbacks.py  environmental_impact_callbacks.py  (+7 more)
src/mar_dss/knowledge/: cost.yaml  input.yaml  rules.yaml  rules.ymal  tree_doc.txt
src/mar_dss/mar/: __init__.py  benefits.py  dss.py  forward_run.py  hard_constraints.py  options.py  soft_constraints.py
src/mar_dss/rules/: analytical_solutions.py  defaults.py  geohydro_rules.py
tests/: __init__.py  demo_4level_graph.py  test_4level_graph.py  test_base.py  test_base_branching.py  test_confined_suitability.py  test_dynamic_import.py  test_graph.py  test_mar_dss.py  test_read_kowledge.py  test_unconfined_suitability.py
(+45 files in other folders)
