[project]
name = "mar_dss"
version = "0.1.0"
description = "Managed Aquifer Recharge Decision Support System"
readme = "README.md"
authors = [
  {name = "Ayman H. Alzraiee", email = "aalzraiee@gsi-net.com"}
]
maintainers = [
  {name = "Ayman H. Alzraiee", email = "aalzraiee@gsi-net.com"}
]
classifiers = [
    # TODO
]
license = {text = "MIT"}
dependencies = [
  "typer",
  "plotly>=5.17.0",
  "dash>=2.14.0",
  "dash-bootstrap-components>=1.5.0",
  "dash-table>=5.0.0",
  "dash-leaflet>=0.1.0",
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "requests>=2.28.0"
]
requires-python = ">= 3.10"

[project.optional-dependencies]
exe = [
  "pyinstaller>=6.0",
]
test = [
    "coverage",  # testing
    "pytest",  # testing
    "ruff",  # linting
    "ty", # checking types
    "ipdb", # debugging
]

[project.urls]
bugs = "https://github.com/aymanalz/mar_dss/issues"
changelog = "https://github.com/aymanalz/mar_dss/blob/master/changelog.md"
homepage = "https://github.com/aymanalz/mar_dss"

[project.scripts]
mar_dss = "mar_dss.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.uv]
package = true
